--- a/Personality/Personality/Personality/MainPage.xaml
+++ b/Personality/Personality/Personality/MainPage.xaml
@@ -6,54 +6,63 @@
              mc:Ignorable="d"
              x:Class="Personality.MainPage">
 
-    <StackLayout>
+    <StackLayout BackgroundColor="DarkSlateGray">
         <Label Text="Name:"
+               TextColor="WhiteSmoke"
                FontSize="18"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="NameEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke"/>
         <Label x:Name="AgeLabel"
                Text="{Binding Source={x:Reference AgeSlider}, Path=Value, StringFormat='Age: {0:F0}'}"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Slider x:Name="AgeSlider"
                 Minimum="0"
                 Maximum="99"
-                MinimumTrackColor="DarkSlateGray"
+                MinimumTrackColor="DeepPink"
                 MaximumTrackColor="LightSlateGray" />
 
         <Label Text="Favorite Color:"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="ColorEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke" />
         
         <Label Text="First Car:"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="CarEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke"/>
         
         <Label Text="Current Pet:"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="PetEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke"/>
         
         <Label Text="Country:"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="CountryEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke"/>
         
         <Label Text="Latest Vacation:"
                FontSize="18"
+               TextColor="WhiteSmoke"
                HorizontalOptions="CenterAndExpand" />
         <Entry x:Name="VacationEntry"
-               BackgroundColor="LightSlateGray"/>
+               TextColor="WhiteSmoke"/>
         <Button Text="View Results"
                 BackgroundColor="DeepPink"
                 TextColor="WhiteSmoke"
+                HorizontalOptions="Center"
+                CornerRadius="4"
                 Clicked="OpenResult" />
     </StackLayout>
 </ContentPage>
