--- a/Personality/Personality/Personality/ThirdPage.xaml
+++ b/Personality/Personality/Personality/ThirdPage.xaml
@@ -6,16 +6,18 @@
              mc:Ignorable="d"
              x:Class="Personality.ThirdPage">
     <StackLayout BackgroundColor="DarkSlateGray">
-        <Label Text="Question Three" FontSize="48" TextColor="WhiteSmoke" />
-        <BoxView BackgroundColor="WhiteSmoke"
-                 HeightRequest="320"
-                 WidthRequest="320"
-                 HorizontalOptions="Center"
-                 VerticalOptions="CenterAndExpand">
-            <BoxView.GestureRecognizers>
+        <Label Text="Fortunes?" FontSize="48" TextColor="WhiteSmoke" />
+        <ContentView BackgroundColor="WhiteSmoke"
+                     HeightRequest="320"
+                     WidthRequest="320"
+                     HorizontalOptions="Center"
+                     VerticalOptions="CenterAndExpand">
+            <ContentView.GestureRecognizers>
                 <SwipeGestureRecognizer Direction="Left" Swiped="Left" />
                 <SwipeGestureRecognizer Direction="Right" Swiped="Right" />
-            </BoxView.GestureRecognizers>
-        </BoxView>
+            </ContentView.GestureRecognizers>
+            <Image Aspect="AspectFit"
+                   Source="crystal.jpg" />
+        </ContentView>
     </StackLayout>
 </ContentPage>
