--- a/Personality/Personality/Personality/MainPage.xaml
+++ b/Personality/Personality/Personality/MainPage.xaml
@@ -5,19 +5,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="Personality.MainPage">
-    <StackLayout BackgroundColor="DarkSlateGray">
-        <Label Text="Potions?" FontSize="48" TextColor="WhiteSmoke" />
-        <ContentView BackgroundColor="WhiteSmoke"
-                 HeightRequest="320"
-                 WidthRequest="320"
-                 HorizontalOptions="Center"
-                 VerticalOptions="CenterAndExpand">
+    <StackLayout BackgroundColor="#34495e">
+        <Label Text="Potions?" 
+               FontSize="48" 
+               TextColor="White"
+               HorizontalOptions="CenterAndExpand"/>
+        <ContentView HeightRequest="320"
+                     WidthRequest="320"
+                     HorizontalOptions="Center">
             <ContentView.GestureRecognizers>
                 <SwipeGestureRecognizer Direction="Left" Swiped="Left" />
                 <SwipeGestureRecognizer Direction="Right" Swiped="Right" />
             </ContentView.GestureRecognizers>
             <Image Aspect="AspectFit"
-                   Source="potion.jpg" />
+                   Source="potion.jpg"/>
         </ContentView>
+        <StackLayout Orientation="Horizontal"
+                     HorizontalOptions="CenterAndExpand">
+            <Button Text="Dislike"
+                    BackgroundColor="#e74c3c"
+                    TextColor="White"
+                    Clicked="Left"/>
+            <Button Text="Like"
+                    BackgroundColor="#2ecc71"
+                    TextColor="White"
+                    Clicked="Right"/>
+        </StackLayout>
     </StackLayout>
 </ContentPage>
