--- a/Personality/Personality/Personality/ThirdPage.xaml
+++ b/Personality/Personality/Personality/ThirdPage.xaml
@@ -18,7 +18,7 @@
                 <SwipeGestureRecognizer Direction="Right" Swiped="Right" />
             </ContentView.GestureRecognizers>
             <Image Aspect="AspectFit"
-                   Source="crystal.jpg" />
+                   Source="gymnastics.png" />
         </ContentView>
         <StackLayout Orientation="Horizontal"
                      HorizontalOptions="CenterAndExpand">
