--- a/Final/Final/Final/Views/MainPage.xaml
+++ b/Final/Final/Final/Views/MainPage.xaml
@@ -6,29 +6,14 @@
             mc:Ignorable="d"
             xmlns:views="clr-namespace:Final.Views"
             x:Class="Final.Views.MainPage">
-
-    <TabbedPage.Children>
-        <NavigationPage Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>
-    
+    <NavigationPage Title="Browse">
+        <x:Arguments>
+            <views:ItemsPage />
+        </x:Arguments>
+    </NavigationPage>
+    <NavigationPage Title="Settings">
+        <x:Arguments>
+            <views:SettingsPage />
+        </x:Arguments>
+    </NavigationPage>
 </TabbedPage>
