--- a/Final/Final/Final/Views/ItemDetailPage.xaml
+++ b/Final/Final/Final/Views/ItemDetailPage.xaml
@@ -6,12 +6,8 @@
              mc:Ignorable="d"
              x:Class="Final.Views.ItemDetailPage"
              Title="{Binding Title}">
-
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small"/>
+        <Label Text="Name:" FontSize="Medium" />
+        <Label Text="{Binding Country.Name}" d:Text="Country name" FontSize="Small"/>
     </StackLayout>
-    
 </ContentPage>
