--- a/Final/Final/Final/Views/NewItemPage.xaml
+++ b/Final/Final/Final/Views/NewItemPage.xaml
@@ -5,20 +5,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="Final.Views.NewItemPage"
-             Title="New Item">
-    
+             Title="New Country">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
         <ToolbarItem Text="Save" Clicked="Save_Clicked" />
     </ContentPage.ToolbarItems>
-    
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+            <Label Text="Country Name" FontSize="Medium" />
+            <Entry x:Name="NameEntry" d:Text="Item name" FontSize="Small" />
         </StackLayout>
     </ContentPage.Content>
-    
 </ContentPage>
