Align data view to right

--- a/Final/Final/Final/Views/ItemDetailPage.xaml
+++ b/Final/Final/Final/Views/ItemDetailPage.xaml
@@ -7,15 +7,75 @@
              x:Class="Final.Views.ItemDetailPage"
              Title="{Binding Title}">
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Name:" FontSize="Medium" />
-        <Label Text="{Binding Country.Name}" d:Text="Name" FontSize="Small"/>
-        <Label Text="Capital:" FontSize="Medium" />
-        <Label Text="{Binding Country.Capital}" d:Text="Capital" FontSize="Small"/>
-        <Label Text="Region:" FontSize="Medium" />
-        <Label Text="{Binding Country.Region}" d:Text="Region" FontSize="Small"/>
-        <Label Text="Sub-Region:" FontSize="Medium" />
-        <Label Text="{Binding Country.SubRegion}" d:Text="SubRegion" FontSize="Small"/>
-        <Label Text="Population:" FontSize="Medium" />
-        <Label Text="{Binding Country.Population}" d:Text="Population" FontSize="Small"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Text="Name:" 
+                   FontSize="Medium"
+                   HorizontalOptions="Start" />
+            <Label Text="{Binding Country.Name}" 
+                   d:Text="Name" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"
+                   HorizontalOptions="End" />
+        </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Text="Capital:" 
+                   FontSize="Medium"
+                   HorizontalOptions="Start"/>
+            <Label Text="{Binding Country.Capital}" 
+                   d:Text="Capital" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"
+                   HorizontalOptions="End" />
+        </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Text="Region:" 
+                   FontSize="Medium"
+                   HorizontalOptions="Start" />
+            <Label Text="{Binding Country.Region}" 
+                   d:Text="Region" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"
+                   HorizontalOptions="End" />
+        </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Text="Sub-Region:" 
+                   FontSize="Medium"
+                   HorizontalOptions="Start" />
+            <Label Text="{Binding Country.SubRegion}" 
+                   d:Text="SubRegion" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"
+                   HorizontalOptions="End" />
+        </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Text="Population:" 
+                   FontSize="Medium"
+                   HorizontalOptions="Start" />
+            <Label Text="{Binding Country.Population}" 
+                   d:Text="Population" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"
+                   HorizontalOptions="End" />
+        </Grid>
     </StackLayout>
 </ContentPage>
